<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="brood.com.medcrawler.AdminMain">

    <item
        android:id="@+id/administration_main_action_reload"
        android:orderInCategory="100"
        android:title="Reload"
        android:icon="@drawable/reload_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/administration_main_action_fav"
        android:orderInCategory="100"
        android:title="Favorite User"
        android:icon="@drawable/favicon"
        app:showAsAction="always" />

    <item
        android:id="@+id/administration_main_action_new_user"
        android:orderInCategory="100"
        android:title="@string/action_new_user"
        android:icon="@drawable/ic_person_add"
        app:showAsAction="always" />


    <item
        android:id="@+id/administration_main_action_search"
        android:orderInCategory="50"
        android:title="Search"
        app:showAsAction="never" />

    <item
        android:id="@+id/administration_main_action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/administration_main_action_profile"
        android:orderInCategory="200"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/administration_main_action_logout"
        android:orderInCategory="300"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
