<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="brood.com.medcrawler.AdminMain">

    <item
        android:id="@+id/administration_main_action_fav"
        android:orderInCategory="100"
        android:title="Favorite User"
        android:icon="@drawable/favicon"
        app:showAsAction="always" />
    <item
        android:id="@+id/administration_main_action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/administration_main_action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/administration_main_action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
