<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Validation"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/warning_icon"
            android:layout_marginRight="10dp"
            android:src="@drawable/warning_icon" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/warning_icon"
            android:text="This account has not been verified"
            android:textSize="17sp" />




    </RelativeLayout>
    <RelativeLayout
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/how_to_reg_txt"
            android:textSize="12sp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/click_here_txt"
            android:text="@string/click_here_txt"
            android:textStyle="bold"
            android:textSize="12sp"

            android:textColor="@color/colorPrimary" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="to resend email"
            android:textSize="12sp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/click_here_txt"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/aff_del_spec_btn"
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonselector"
            android:text="@string/check_status_btn_txt"
            android:singleLine="true"
            android:textColor="@color/colorWhite" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ver_email_cancel_btn"
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonselector"
            android:singleLine="true"
            android:text="Cancel"
            android:layout_below="@+id/aff_del_spec_btn"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>


</LinearLayout>