<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".GeneralLogin">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/lock_icon"
                android:src="@drawable/logo_mix4"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/login_fields"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/email_layout"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="7dp"
                    android:layout_marginRight="15dp"
                    android:layout_alignBottom="@+id/email_login_layout"
                    android:id="@+id/atIcon"
                    android:src="@drawable/email_icon" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_login_layout"
                    android:layout_width="290dp"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/email_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignRight="@+id/atIcon"
                        android:hint="Email Address"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/password_layout"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="7dp"
                    android:layout_marginRight="15dp"
                    android:layout_alignBottom="@+id/password_login_layout"
                    android:src="@drawable/password_icon" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_login_layout"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Password"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

        </LinearLayout>
        


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:layout_marginTop="35dp">

            <Button
                android:id="@+id/general_login_signin_btn"
                android:layout_width="314dp"
                android:layout_height="50dp"
                android:background="@drawable/buttonselector"
                android:text="Signin"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signin_progress_bar"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />



        </FrameLayout>

        <RelativeLayout
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_toLeftOf="@+id/separator_center"
                android:layout_marginRight="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/separator_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_centerInParent="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_toRightOf="@id/separator_center"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_marginLeft="14dp"
                android:textStyle="bold" />

        </RelativeLayout>



    </LinearLayout>

</LinearLayout>
